playground/templates/argo.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-ui
spec:
  ports:
  - port: 80
    targetPort: 8001
  selector:
    app: argo-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-ui
spec:
  selector:
    matchLabels:
      app: argo-ui
  template:
    metadata:
      labels:
        app: argo-ui
    spec:
      containers:
      - env:
        - name: ARGO_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: IN_CLUSTER
          value: "true"
        - name: ENABLE_WEB_CONSOLE
          value: "false"
        - name: BASE_HREF
          value: /
        image: argoproj/argoui:v2.4.3
        name: argo-ui
      #serviceAccountName: argo-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
spec:
  selector:
    matchLabels:
      app: workflow-controller
  template:
    metadata:
      labels:
        app: workflow-controller
    spec:
      containers:
      - args:
        - --configmap
        - workflow-controller-configmap
        - --executor-image
        - argoproj/argoexec:v2.4.3
        command:
        - workflow-controller
        image: argoproj/workflow-controller:v2.4.3
        name: workflow-controller
      #serviceAccountName: argo
